# EmuCoreV

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/catalog/: psvita_games.db
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/vita3k/: CMakeLists.txt
app/src/main/cpp/vita3k/vita3k/ime/: CMakeLists.txt
app/src/main/cpp/vita3k/vita3k/ime/include/ime/: functions.h
app/src/main/cpp/vita3k/vita3k/ime/src/: functions.cpp
app/src/main/res/drawable/: ic_controller_down_button.xml  ic_controller_left_button.xml  ic_controller_right_button.xml  ic_controller_up_button.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  integers.xml  (+3 more)
app/src/main/res/values-de/: plurals.xml  strings.xml
app/src/main/res/values-es/: plurals.xml  strings.xml
app/src/main/res/values-fr/: plurals.xml  strings.xml
app/src/main/res/values-hi/: plurals.xml  strings.xml
app/src/main/res/values-it/: plurals.xml  strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pt/: plurals.xml  strings.xml
app/src/main/res/values-ru/: plurals.xml  strings.xml
app/src/main/res/values-tr/: plurals.xml  strings.xml
app/src/main/res/values-uk/: plurals.xml  strings.xml
app/src/main/res/values-zh/: plurals.xml  strings.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build_android_openssl.sh
tools/openssl-test/: build_android_openssl.sh
(+130 files in other folders)
